external-quote/force-app/main/default/objects/SuperTRUMP_Quote_Rent__c/SuperTRUMP_Quote_Rent__c.object-meta.xml
<CustomObject>
    <label>SuperTRUMP Quote Rent</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Rent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuperTRUMP Quote Rents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>