external-quote/force-app/main/default/objects/SuperTRUMP_Quote_Rent__c/fields/Advance_Payment__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment__c</fullName>
    <label>Advance Payment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>