external-quote/force-app/main/default/objects/SuperTRUMP_Quote_Rent__c/fields/stExternalID__c.field-meta.xml
<CustomField>
    <fullName>stExternalID__c</fullName>
    <label>ST ID</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>